Bug 1513088 - Use MozStackWalk in the profiler for aarch64 Windows. r=froydnj

Depends on D14929

Differential Revision: https://phabricator.services.mozilla.com/D14930

--HG--
extra : moz-landing-system : lando